syntax = "proto3";

package hotel.v1;

option go_package = "api/hotel/v1;hotelv1";

import "buf/validate/validate.proto";

message DeleteHotelRequest {
  string country_code = 1 [
    (buf.validate.field).string.pattern = "^[a-z]{2}$"
  ];
  string city_slug = 2 [
    (buf.validate.field).string.pattern = "^[a-z0-9]+(-[a-z0-9]+)*$"
  ];
  string slug = 3 [
    (buf.validate.field).string.pattern = "^[a-z0-9]+(-[a-z0-9]+)*$"
  ];
}

message DeleteHotelResponse {
  string message = 1;
}