syntax = "proto3";

package hotel.v1;

option go_package = "api/hotel/v1;hotelv1";

import "buf/validate/validate.proto";
import "hotel/v1/models/hotel.proto";

message UpdateHotelTitleRequest {
  string country_code = 1 [
    (buf.validate.field).string.pattern = "^[a-z]{2}$"
  ];
  string city_slug = 2 [
    (buf.validate.field).string.pattern = "^[a-z0-9]+(-[a-z0-9]+)*$"
  ];
  string slug = 3 [
    (buf.validate.field).string.pattern = "^[a-z0-9]+(-[a-z0-9]+)*$"
  ];
  string title = 4 [
    (buf.validate.field).required = true
  ];
}

message UpdateHotelTitleResponse {
  UpdateHotelTitle hotel = 1;
}