syntax = "proto3";

package hotel.v1;

option go_package = "api/hotel/v1;hotelv1";

import "buf/validate/validate.proto";
import "hotel/v1/models/hotel.proto";

message UpdateHotelLocationRequest {
  float latitude = 1 [
    (buf.validate.field).float = {gte: -90, lte: 90}
  ];
  float longitude = 2 [
    (buf.validate.field).float = {gte: -180, lte: 180}
  ];
}

message UpdateHotelRequest {
  string country_code = 1 [
    (buf.validate.field).string.pattern = "^[a-z]{2}$"
  ];
  string city_slug = 2 [
    (buf.validate.field).string.pattern = "^[a-z0-9]+(-[a-z0-9]+)*$"
  ];
  string slug = 3 [
    (buf.validate.field).string.pattern = "^[a-z0-9]+(-[a-z0-9]+)*$"
  ];
  optional string description = 5;
  string address = 6 [
    (buf.validate.field).required = true
  ];
  UpdateHotelLocationRequest location = 7 [
    (buf.validate.field).required = true
  ];
}

message UpdateHotelResponse {
  UpdateHotel hotel = 1;
}